--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/baynezy/SlackGit#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "mocha": "^3.1.0",
     "sinon": "^1.17.6"
   }
 }
